Updated App to Use New JSON Data Format

--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <html>
   <head>
   <script src="../scripts/jquery-1.9.1.min.js"></script>
-  <script src="../scripts/day_hours.js"></script>
-  <script src="../scripts/nfl_game_stats-2.0.2.js"></script>
   <script src="nfl.js"></script>
   </head>
   <style>
@@ -16,9 +14,7 @@
 }
   body {
     width: 100%;
-    /*height: 100%;*/
     margin: 0;
-/*    padding: 5px 5px 20px 5px;*/
     padding: 0 0 20px 0;
     overflow-x: hidden;
     font-size: 24px;
@@ -52,7 +48,7 @@
   }
   #row_0 div {
     border: none;
-    background: #061739;
+    background: #4a433d;
     color: white;
     font-weight: bold;
   }
@@ -61,7 +57,7 @@
   }
   .row .col_0 {
     border: none;
-    background: #d30104;
+    background: #c80f2e;
     color: white;
     font-weight: bold;
   }
@@ -161,7 +157,7 @@
 
 .header {
     height: 85px;
-    background: #000 url(superbowl-logo.png) center no-repeat;
+    background: #000 url(superbowl-logo.jpg) center no-repeat;
     background-size: contain;
     padding: 0;
     margin: 0;
@@ -210,146 +206,146 @@
       <div class="squares">
       <div id="row_0" class="row">
         <div class="col_0"></div>
-        <div class="col_1">0</div>
+        <div class="col_1">8</div>
         <div class="col_2">0</div>
-        <div class="col_3">0</div>
-        <div class="col_4">0</div>
-        <div class="col_5">0</div>
-        <div class="col_6">0</div>
-        <div class="col_7">0</div>
-        <div class="col_8">0</div>
-        <div class="col_9">0</div>
-        <div class="col_10">0</div>
+        <div class="col_3">1</div>
+        <div class="col_4">4</div>
+        <div class="col_5">3</div>
+        <div class="col_6">2</div>
+        <div class="col_7">9</div>
+        <div class="col_8">6</div>
+        <div class="col_9">5</div>
+        <div class="col_10">7</div>
       </div>
       <div id="row_1" class="row play_nums">
-        <div class="col_0">0</div>
-        <div class="col_1">RD</div>
-        <div class="col_2">ML</div>
-        <div class="col_3">JG</div>
-        <div class="col_4">AS</div>
+        <div class="col_0">5</div>
+        <div class="col_1">AS</div>
+        <div class="col_2">RD</div>
+        <div class="col_3">KG</div>
+        <div class="col_4">TE</div>
         <div class="col_5">CG</div>
         <div class="col_6">LD</div>
         <div class="col_7">KG</div>
-        <div class="col_8">NG</div>
-        <div class="col_9">NG</div>
-        <div class="col_10">RD</div>
+        <div class="col_8">TE</div>
+        <div class="col_9">AS</div>
+        <div class="col_10">AS</div>
       </div>
       <div id="row_2" class="row play_nums">
-        <div class="col_0">0</div>
-        <div class="col_1">LD</div>
-        <div class="col_2">AS</div>
+        <div class="col_0">7</div>
+        <div class="col_1">ML</div>
+        <div class="col_2">JG</div>
         <div class="col_3">RD</div>
-        <div class="col_4">JG</div>
-        <div class="col_5">ML</div>
-        <div class="col_6">JG</div>
-        <div class="col_7">RG</div>
-        <div class="col_8">ML</div>
-        <div class="col_9">NG</div>
-        <div class="col_10">ML</div>
+        <div class="col_4">KG</div>
+        <div class="col_5">AS</div>
+        <div class="col_6">KG</div>
+        <div class="col_7">LD</div>
+        <div class="col_8">TE</div>
+        <div class="col_9">CG</div>
+        <div class="col_10">LD</div>
       </div>
       <div id="row_3" class="row play_nums">
-        <div class="col_0">0</div>
-        <div class="col_1">CG</div>
-        <div class="col_2">AS</div>
-        <div class="col_3">KG</div>
-        <div class="col_4">ML</div>
-        <div class="col_5">RG</div>
-        <div class="col_6">ML</div>
-        <div class="col_7">NG</div>
-        <div class="col_8">RD</div>
-        <div class="col_9">AS</div>
-        <div class="col_10">CG</div>
-      </div>
-      <div id="row_4" class="row play_nums">
-        <div class="col_0">0</div>
-        <div class="col_1">NG</div>
-        <div class="col_2">LD</div>
-        <div class="col_3">JG</div>
-        <div class="col_4">AS</div>
-        <div class="col_5">ML</div>
-        <div class="col_6">RG</div>
-        <div class="col_7">CG</div>
-        <div class="col_8">JG</div>
-        <div class="col_9">RG</div>
-        <div class="col_10">ML</div>
-      </div>
-      <div id="row_5" class="row play_nums">
-        <div class="col_0">0</div>
+        <div class="col_0">3</div>
         <div class="col_1">KG</div>
         <div class="col_2">ML</div>
-        <div class="col_3">RG</div>
-        <div class="col_4">LD</div>
+        <div class="col_3">JG</div>
+        <div class="col_4">RD</div>
+        <div class="col_5">KG</div>
+        <div class="col_6">TE</div>
+        <div class="col_7">CG</div>
+        <div class="col_8">JG</div>
+        <div class="col_9">ML</div>
+        <div class="col_10">RD</div>
+      </div>
+      <div id="row_4" class="row play_nums">
+        <div class="col_0">6</div>
+        <div class="col_1">ML</div>
+        <div class="col_2">KG</div>
+        <div class="col_3">ML</div>
+        <div class="col_4">JG</div>
+        <div class="col_5">RD</div>
+        <div class="col_6">KG</div>
+        <div class="col_7">LD</div>
+        <div class="col_8">JG</div>
+        <div class="col_9">AS</div>
+        <div class="col_10">TE</div>
+      </div>
+      <div id="row_5" class="row play_nums">
+        <div class="col_0">4</div>
+        <div class="col_1">TE</div>
+        <div class="col_2">CG</div>
+        <div class="col_3">LD</div>
+        <div class="col_4">ML</div>
         <div class="col_5">JG</div>
-        <div class="col_6">RD</div>
-        <div class="col_7">NG</div>
-        <div class="col_8">AS</div>
-        <div class="col_9">RG</div>
-        <div class="col_10">CG</div>
+        <div class="col_6">JG</div>
+        <div class="col_7">KG</div>
+        <div class="col_8">LD</div>
+        <div class="col_9">RD</div>
+        <div class="col_10">RD</div>
       </div>
       <div id="row_6" class="row play_nums">
         <div class="col_0">0</div>
-        <div class="col_1">CG</div>
-        <div class="col_2">LD</div>
-        <div class="col_3">NG</div>
-        <div class="col_4">KG</div>
-        <div class="col_5">NG</div>
-        <div class="col_6">ML</div>
-        <div class="col_7">RD</div>
-        <div class="col_8">RD</div>
-        <div class="col_9">RG</div>
-        <div class="col_10">AS</div>
+        <div class="col_1">LD</div>
+        <div class="col_2">FN</div>
+        <div class="col_3">CG</div>
+        <div class="col_4">LD</div>
+        <div class="col_5">ML</div>
+        <div class="col_6">JG</div>
+        <div class="col_7">JG</div>
+        <div class="col_8">KG</div>
+        <div class="col_9">JG</div>
+        <div class="col_10">ML</div>
       </div>
       <div id="row_7" class="row play_nums">
-        <div class="col_0">0</div>
-        <div class="col_1">LD</div>
-        <div class="col_2">AS</div>
-        <div class="col_3">CG</div>
+        <div class="col_0">8</div>
+        <div class="col_1">FN</div>
+        <div class="col_2">TE</div>
+        <div class="col_3">FN</div>
         <div class="col_4">RD</div>
-        <div class="col_5">KG</div>
-        <div class="col_6">RG</div>
-        <div class="col_7">NG</div>
-        <div class="col_8">RD</div>
-        <div class="col_9">ML</div>
-        <div class="col_10">KG</div>
+        <div class="col_5">FN</div>
+        <div class="col_6">RD</div>
+        <div class="col_7">JG</div>
+        <div class="col_8">CG</div>
+        <div class="col_9">JG</div>
+        <div class="col_10">TE</div>
       </div>
       <div id="row_8" class="row play_nums">
-        <div class="col_0">0</div>
-        <div class="col_1">JG</div>
-        <div class="col_2">NG</div>
-        <div class="col_3">JG</div>
-        <div class="col_4">KG</div>
-        <div class="col_5">AS</div>
-        <div class="col_6">RG</div>
-        <div class="col_7">ML</div>
-        <div class="col_8">RD</div>
-        <div class="col_9">RD</div>
-        <div class="col_10">LD</div>
+        <div class="col_0">9</div>
+        <div class="col_1">LD</div>
+        <div class="col_2">ML</div>
+        <div class="col_3">AS</div>
+        <div class="col_4">CG</div>
+        <div class="col_5">FN</div>
+        <div class="col_6">RD</div>
+        <div class="col_7">RD</div>
+        <div class="col_8">JG</div>
+        <div class="col_9">JG</div>
+        <div class="col_10">AS</div>
       </div>
       <div id="row_9" class="row play_nums">
-        <div class="col_0">0</div>
-        <div class="col_1">LD</div>
-        <div class="col_2">RD</div>
-        <div class="col_3">CG</div>
-        <div class="col_4">KG</div>
-        <div class="col_5">CG</div>
-        <div class="col_6">RG</div>
-        <div class="col_7">KG</div>
-        <div class="col_8">LD</div>
+        <div class="col_0">1</div>
+        <div class="col_1">RD</div>
+        <div class="col_2">ML</div>
+        <div class="col_3">ML</div>
+        <div class="col_4">ML</div>
+        <div class="col_5">LD</div>
+        <div class="col_6">CG</div>
+        <div class="col_7">ML</div>
+        <div class="col_8">RD</div>
         <div class="col_9">ML</div>
-        <div class="col_10">JG</div>
+        <div class="col_10">CG</div>
       </div>
       <div id="row_10" class="row play_nums">
-        <div class="col_0">0</div>
+        <div class="col_0">2</div>
         <div class="col_1">AS</div>
-        <div class="col_2">ML</div>
-        <div class="col_3">JG</div>
-        <div class="col_4">RD</div>
-        <div class="col_5">RD</div>
-        <div class="col_6">ML</div>
-        <div class="col_7">KG</div>
-        <div class="col_8">LD</div>
-        <div class="col_9">CG</div>
-        <div class="col_10">RD</div>
+        <div class="col_2">TE</div>
+        <div class="col_3">RD</div>
+        <div class="col_4">CG</div>
+        <div class="col_5">ML</div>
+        <div class="col_6">AS</div>
+        <div class="col_7">JG</div>
+        <div class="col_8">TE</div>
+        <div class="col_9">RD</div>
+        <div class="col_10">AS</div>
       </div>
     </div>
     </div>
