Updated Theme for Super Bowl 57

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
       #row_0 div {
         border: none;
-        background: #fa5013;
+        background: #00424b;
         color: white;
         font-weight: bold;
       }
@@ -61,7 +61,7 @@
 
       .row .col_0 {
         border: none;
-        background: #203890;
+        background: #e51937;
         color: white;
         font-weight: bold;
       }
@@ -193,7 +193,7 @@
     <div class="header">
     </div>
     <div class="game-data">
-      <img src="teams.jpg" />
+      <img src="teams-57.jpg" />
       <div class="scores">
         <div id="home-score">0</div>
         <div id="away-score">0</div>
